# mcp-sysmon

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/mcp_sysmon/: server.py
tests/: test_server.py
