[project]
name = "mcp-sysmon"
version = "0.1.0"
description = "MCP server for system monitoring — CPU, memory, disk, network, and process management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "dragogargo" }]
keywords = ["mcp", "system-monitor", "devops", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
mcp-sysmon = "mcp_sysmon.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
